--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
-    <script src="./makelists.js"></script>
+    <script src="./makelists.js" async></script>
     <title>りすとめーかー</title>
 </head>
 <body>
     <h1>りすとめーかー</h1>
-    <div id="TxtArea">
+    <div id="txtArea">
         <textarea name="" id="text" cols="30" rows="10"></textarea>
     </div>
-    <div id="BtnArea">
-        <button id="UlBtn">番号無しリストを生成</button>
-        <button id="OlBtn">番号付きリストを生成</button>
+    <div id="btnArea">
+        <button id="ulBtn">番号無しリストを生成</button>
+        <button id="olBtn">番号付きリストを生成</button>
     </div>
 </body>
 </html>
