機能追加とデバッグ用の記載を追加
・テキストクリアボタンを追加
・デバッグ用にtextareaの初期値を設定(最後には消す)

--- a/index.html
+++ b/index.html
@@ -9,11 +9,19 @@
 <body>
     <h1>りすとめーかー</h1>
     <div id="txtArea">
-        <textarea name="" id="text" cols="30" rows="10"></textarea>
+        <textarea name="" id="text" cols="100" rows="10">
+え
+る
+し
+っ
+て
+る
+か</textarea>
     </div>
     <div id="btnArea">
         <button id="ulBtn">番号無しリストを生成</button>
         <button id="olBtn">番号付きリストを生成</button>
+        <button id="clrBtn">テキストクリア</button>
     </div>
 </body>
 </html>
