スマホでコピーできないので、テスト的に再コピーボタンを設置

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <button id="ulBtn">番号無しリストを生成</button>
         <button id="olBtn">番号付きリストを生成</button>
         <button id="clrBtn">テキストクリア</button>
+        <button id="reCopy">再コピー</button>
     </div>
     <div id="result">
     </div>
