スマホ対応処置 ・textareaは一瞬出してすぐ消すようにした ・暫定対策だったメッセージボックスはやめた ・コピー完了を示すメッセージは選択できるようにした ・コピー出来ましたを示す表示はそれ以外にはやらないことにした

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>りすとめーかー</h1>
+    <div id="top"></div>
     <div id="txtArea">
         <textarea name="" id="text"></textarea>
     </div>
@@ -15,9 +16,7 @@
         <button id="ulBtn">番号無しリストを生成</button>
         <button id="olBtn">番号付きリストを生成</button>
         <button id="clrBtn">テキストクリア</button>
-        <button id="reCopy">再コピー</button>
-    </div>
-    <div id="result">
+        <input type="checkbox" id="confirm">コピーしたらダイアログを出す</input>
     </div>
 </body>
 </html>
