--- a/index.html
+++ b/index.html
@@ -8,20 +8,15 @@
 </head>
 <body>
     <h1>りすとめーかー</h1>
+    <div id="top"></div>
     <div id="txtArea">
-        <textarea name="" id="text" cols="100" rows="10">
-え
-る
-し
-っ
-て
-る
-か</textarea>
+        <textarea name="" id="text" cols="100" rows="10"></textarea>
     </div>
     <div id="btnArea">
         <button id="ulBtn">番号無しリストを生成</button>
         <button id="olBtn">番号付きリストを生成</button>
         <button id="clrBtn">テキストクリア</button>
+        <input type="checkbox" id="confirm">コピーしたらダイアログを出す</input>
     </div>
 </body>
 </html>
