--- a/index.html
+++ b/index.html
@@ -1,22 +1,35 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <meta charset="UTF-8">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
     <link rel="stylesheet" href="style.css">
     <script src="./makelists.js" async></script>
     <title>りすとめーかー</title>
 </head>
 <body>
-    <h1>りすとめーかー</h1>
-    <div id="top"></div>
-    <div id="txtArea">
-        <textarea name="" id="text"></textarea>
-    </div>
-    <div id="btnArea">
-        <button id="ulBtn">番号無しリストを生成</button>
-        <button id="olBtn">番号付きリストを生成</button>
-        <button id="clrBtn">テキストクリア</button>
-        <input type="checkbox" id="confirm">コピーしたらダイアログを出す</input>
+
+    <div class="w-75 mx-auto">
+        <h1 class="bg-primary display-3 text-center">りすとめーかー</h1>
+
+        <p class="text-center">下のテキストボックスにテキストを入力し、「番号無しリストを生成」あるいは「番号付きリストを生成」をクリックすると、各行をリスト化したHTMLコードを出力します。</p>
+        <div id="top"></div>
+        <div id="txtArea">
+            <textarea class="form-control w-50 mx-auto" name="" id="text" rows="10"></textarea>
+        </div>
+
+        <div id="btnArea" class="g-secondary w-50 mx-auto">
+            <button type="button" class="btn btn-primary" id="ulBtn">番号無しリストを生成</button>
+            <button type="button" class="btn btn-primary" id="olBtn">番号付きリストを生成</button>
+            <button type="button" class="btn btn-secondary" id="clrBtn">テキストクリア</button><br>
+            <input type="checkbox" id="confirm">
+            <label for="confirm">コピーしたらダイアログを出す</label>
+        </div>
     </div>
 </body>
 </html>
