スマホ用デザインの再修正

--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
 <body>
 
     <div class="w-75 mx-auto">
-        <h1 class="bg-primary display-3 text-center">りすとめーかー</h1>
+        <h1 class="bg-primary display-4 text-center">りすとめーかー</h1>
 
         <p class="text-center">下のテキストボックスにテキストを入力し、「番号無しリストを生成」あるいは「番号付きリストを生成」をクリックすると、各行をリスト化したHTMLコードを出力します。</p>
         <div id="top"></div>
         <div id="txtArea">
-            <textarea class="form-control w-75 mx-auto" name="" id="text" rows="10"></textarea>
+            <textarea class="form-control mx-auto" name="" id="text" rows="10"></textarea>
         </div>
 
-        <div id="btnArea" class="g-secondary w-75 mx-auto">
+        <div id="btnArea" class="g-secondary w-50 mx-auto">
             <button type="button" class="btn btn-primary" id="ulBtn">番号無しリストを生成</button>
             <button type="button" class="btn btn-primary" id="olBtn">番号付きリストを生成</button>
             <button type="button" class="btn btn-secondary" id="clrBtn">テキストクリア</button><br>
