タイトルの文字サイズを修正し、チェックボックスの文言を調整

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
     <div class="w-75 mx-auto">
-        <h1 class="bg-primary display-4 text-center">りすとめーかー</h1>
+        <h1 class="bg-primary display-6 text-center">りすとめーかー</h1>
 
         <p class="text-center">下のテキストボックスにテキストを入力し、「番号無しリストを生成」あるいは「番号付きリストを生成」をクリックすると、各行をリスト化したHTMLコードを出力します。</p>
         <div id="top"></div>
@@ -28,7 +28,7 @@
             <button type="button" class="btn btn-primary" id="olBtn">番号付きリストを生成</button>
             <button type="button" class="btn btn-secondary" id="clrBtn">テキストクリア</button><br>
             <input type="checkbox" id="confirm">
-            <label for="confirm">コピーしたらダイアログを出す</label>
+            <label for="confirm">コピー後に確認</label>
         </div>
     </div>
 </body>
