ページ内用のアンカーを貼れるようにチェックボックスを追加

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 					<button type="button" class="btn btn-primary" id="ulBtn">ul</button>
 					<button type="button" class="btn btn-primary" id="olBtn">ol</button>
 					<button type="button" class="btn btn-secondary" id="clrBtn">クリア</button><br>
-					<input type="checkbox" id="confirm">
-					<label for="confirm">コピー後に確認</label>
+					<input type="checkbox" id="confirm"><label for="confirm">コピー後に確認</label><br>
+					<input type="checkbox" id="anker"><label for="anker">ページ内用のリンク貼る</label>
       </section>
 		</div>
   </section>
