ヘッダのサイズが指定できていない不具合を修正 デフォルト値をh3に設定

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					<button type="button" class="btn btn-primary" id="olBtn">ol</button>
 					<button type="button" class="btn btn-secondary" id="clrBtn">クリア</button><br>
 					<input type="checkbox" id="confirm"><label for="confirm">コピー後に確認</label><br>
-					<input type="checkbox" id="anker"><label for="anker">ページ内用のリンク貼る</label><br>リンク先の見出し：h<input type="text" id="h_size" maxlength="1"> 
+					<input type="checkbox" id="anker"><label for="anker">ページ内用のリンク貼る</label><br>リンク先の見出し：h<input type="text" id="h_size" value="3" maxlength="1"> 
       </section>
 		</div>
   </section>
