--- a/index.html
+++ b/index.html
@@ -6,11 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-  <script src="https://kit.fontawesome.com/70c8608464.js"></script>
-  <script src="./makelists.js" async></script>
   <title>りすとめーかー</title>
 </head>
 <body style="background: #f8f8f8; margin: 0;">
@@ -34,10 +32,14 @@
 					<button type="button" class="btn btn-primary" id="ulBtn">ul</button>
 					<button type="button" class="btn btn-primary" id="olBtn">ol</button>
 					<button type="button" class="btn btn-secondary" id="clrBtn">クリア</button><br>
-					<input type="checkbox" id="confirm">
-					<label for="confirm">コピー後に確認</label>
+					<input type="checkbox" id="confirm"><label for="confirm">コピー後に確認</label><br>
+          <label for="tabs">タブ数：<input type="text" id="tabs" value="2" maxlength="1" size="10"/></label>
       </section>
 		</div>
   </section>
+
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+  <script src="./makelists.js"></script>
 </body>
 </html>
