--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
 
-  <title>りすとめーかー</title>
+  <title>りすとめーかー | 簡単にリストをHTML化</title>
 </head>
-<body style="background: #f8f8f8; margin: 0;">
+<body>
   <header>
     <div class="container">
       <i id="open_menu" class="fas fa-bars"></i>
@@ -34,14 +34,20 @@
           <button type="button" class="btn btn-secondary" id="clrBtn">クリア</button><br/>
       </section>
       <section id="option" class="text-left mt-4 w-50 mx-auto">
-					<input type="checkbox" id="confirm"><label for="confirm">コピー後に確認</label><br/>
-          <input type="checkbox" id="anker"><label for="anker">ページ内用のリンク貼る</label><br>
-          <label for="h_size"></label>リンク先の見出し：h<input type="text" id="h_size" value="3" maxlength="1"></label><br/>
-          <label for="ankerLabel">ラベル名：<input type="text" id="ankerLabel" placeholder="ラベル名をアルファベットで入力してください"></label><br/>
-          <label for="tabs">インデント数(半角スペース数)：<input type="text" id="tabs" value="2" maxlength="1" size="10"/></label>
+        <ul>
+          <li><input type="checkbox" id="confirm"><label for="confirm">コピー後に確認</label></li>
+          <li><input type="checkbox" id="anker"><label for="anker">ページ内用のリンク貼る</label></li>
+          <li><label for="h_size">リンク先の見出し：h<input type="text" id="h_size" value="3" maxlength="1"></label></li>
+          <li><label for="ankerLabel">ラベル名：<input type="text" id="ankerLabel" placeholder="ラベル名をアルファベットで入力してください"></label></li>
+          <li><label for="tabs">インデント数(半角スペース数)：<input type="text" id="tabs" value="2" maxlength="1"/></label></li>
+        </ul>
       </section>
 		</div>
   </section>
+
+  <footer>
+    <p><small>copyright 2020-2021 blatank(@bla_tan/ぶらたん)</small></p>
+  </footer>
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
