--- a/index.html
+++ b/index.html
@@ -6,51 +6,92 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
 
   <title>りすとめーかー | 簡単にリストをHTML化</title>
 </head>
 <body>
-  <header>
-    <div class="container">
+  <div class="container">
+    <header>
       <i id="open_menu" class="fas fa-bars"></i>
-      <h1>りすとめーかー</h1>
-  	</div>
-  </header>
-  <section class="itemarea">
-    <div class="container">
-			<section class="feature">
-				<p>入力されたアイテムをHTMLのタグ付けします。</p>
-			</section>
-      <section id="top"></section>
+      <h1 class="mb-0">りすとめーかー</h1>  
+      <p class="ml-3">入力されたアイテムをHTMLのタグ付けします。</p>
+    </header>
+    <main class="mt-4">
+      <section id="itemarea">
+        <div class="form-group">
+          <label for="outputList">リストタグ選択</label>
+          <select class="form-control" id="outputList">
+            <option value="ul">ul</option>
+            <option value="ol">ol</option>
+          </select>
+        </div>
 
-      <section id="txtArea">
-        <textarea class="form-control mx-auto" name="" id="text" rows="7"></textarea>
-			</section>
-			<section id="btnArea" class="g-secondary w-50 mx-auto">
-					<button type="button" class="btn btn-primary" id="ulBtn">ul</button>
-					<button type="button" class="btn btn-primary" id="olBtn">ol</button>
-          <button type="button" class="btn btn-secondary" id="clrBtn">クリア</button><br/>
-      </section>
-      <section id="option" class="text-left mt-4 w-50 mx-auto">
-        <ul>
-          <li><input type="checkbox" id="confirm"><label for="confirm">コピー後に確認</label></li>
-          <li><input type="checkbox" id="anker"><label for="anker">ページ内用のリンク貼る</label></li>
-          <li><label for="h_size">リンク先の見出し：h<input type="text" id="h_size" value="3" maxlength="1"></label></li>
-          <li><label for="ankerLabel">ラベル名：<input type="text" id="ankerLabel" placeholder="ラベル名をアルファベットで入力してください"></label></li>
-          <li><label for="tabs">インデント数(半角スペース数)：<input type="text" id="tabs" value="2" maxlength="1"/></label></li>
-        </ul>
-      </section>
-		</div>
-  </section>
+        <div class="form-group">
+          <label for="indent">インデント</label>
+          <select class="form-control" id="indent">
+            <option value="0">タブ</option>
+            <option value="1">半角スペース2つ</option>
+            <option value="2">半角スペース4つ</option>
+          </select>
+        </div>
 
-  <footer>
+        <div class="form-group">
+          <label for="pasteLinkInPage">ページ内のリンク</label>
+          <select class="form-control" id="pasteLinkInPage">
+            <option value="0">貼らない</option>
+            <option value="1">貼る</option>
+          </select>
+        </div>
+
+        <div class="form-group">
+          <label for="headerForLinkInPage">ページ内リンクのヘッダ</label>
+          <select disabled class="form-control" id="headerForLinkInPage">
+            <option value="h2">h2</option>
+            <option value="h3">h3</option>
+            <option value="h4">h4</option>
+            <option value="h5">h5</option>
+            <option value="h6">h6</option>
+          </select>
+        </div>
+
+
+        <div class="form-group">
+          <label for="labelForLinkInPage">ページ内リンクのラベル名</label>
+          <input type="text" disabled class="form-control" id="labelForLinkInPage" placeholder="ラベル名">
+        </div>
+
+        <div class="form-group">
+          <label for="text">リスト化したい内容(改行毎にリスト化)</label>
+          <textarea class="form-control" id="text" rows="5"></textarea>
+        </div>
+
+        <div class="form-group form-check mb-0">
+          <input type="checkbox" class="form-check-input" id="confirm">
+          <label for="confirm">コピー後に確認</label>
+        </div>
+
+        <div class="form-group form-check">
+          <input type="checkbox" class="form-check-input" id="save">
+          <label for="save">Cookieに設定を保存する(20日間有効)</label>
+        </div>
+        <div class="mt-3 mb-5">
+          <button class="btn btn-primary mr-3" id="makeBtn">リスト作成</button>
+          <button class="btn btn-secondary mr-3" id="clrBtn">内容クリア</button>
+          <button class="btn btn-danger" id="resetBtn">設定リセット</button>
+        </div>
+      </section>
+    </main>
+  </div>
+
+  <footer class="mt-4">
     <p><small>copyright 2020-2021 blatank(@bla_tan/ぶらたん)</small></p>
   </footer>
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
   <script src="./makelists.js"></script>
 </body>
 </html>
